--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,6 +5,9 @@
     <title>Meadowlark Travel</title>
 </head>
 <body>
+    <header>
+      <img src="/img/logo.png" alt="Meadowlark">
+    </header>
     {{{body}}}
 </body>
 </html>
